--- a/practica02/css/estilos.css
+++ b/practica02/css/estilos.css
@@ -37,6 +37,7 @@ header nav ul li{
 	float: right;
 }
 #primerseccion{
+
 	height: 318px;
 	margin-top: 60px;
 
@@ -52,4 +53,49 @@ header nav ul li{
 #secc01art2{
 	margin-left: 50px;
 	width: 30%;
+}
+#segundaSeccion article{
+		padding-right: 122px;
+		text-align: right;
+}
+#terceraSeccion article{
+		display:inline-block;
+		vertical-align: top;
+		width: 23%;
+}
+#terceraSeccion article img{
+	vertical-align: middle;
+}
+#terceraSeccion article input{
+	border-radius: 5px;
+	padding-top: 5px;
+
+}
+#terceraSeccion article input [type="button"]{
+	background: #8BC500;
+	color: white;
+	
+}
+#article04{
+	padding-top: 40px;
+	padding-left: 25px;
+}
+.colorazul{
+	color: #4267B3
+}
+.colorrosa{
+	color:#FF0099;
+}
+.colorverde{
+	color: #8BC500;
+}
+.letragrande{
+		font-size: 3.5em;
+
+}
+.letramediana{
+	font-size: 2em;
+}
+.nito{
+	font-weight: bold;
 }
