--- a/exa02_12/css/estilos.css
+++ b/exa02_12/css/estilos.css
@@ -15,6 +15,17 @@ img[src="img/twitter.png"]{
 	width: 50px;
 	height: 50px;
 }
+#s1 article span {
+	display: flex;
+   justify-content: center;
+   align-items: center;
+}
+#s2 article span {
+	display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
 #persona{
 	height: 400px;
 }
@@ -44,7 +55,18 @@ img[src="img/twitter.png"]{
 	background-color:#606060;
 	margin-left: -4px; 
 }
-#s2 article
+#btn1 {
+	padding-top: 30px;
+}
+#btn2 {
+	padding-top: 30px;
+}
+#s2 article span{
+	position: relative;
+
+	vertical-align: middle;
+}
+
 #a1s2{
 	display: inline-block;
 	margin-top: -4px;
@@ -77,10 +99,19 @@ img[src="img/twitter.png"]{
 #span3s1{
 	padding-top: 10%; 
 }
+#span2s1{
+	padding-top: 10%;
+}
+#span1s2{
+	padding-top: 10%; 
+}
+#span2s2{
+	padding-top: 10%;
+}
 #twitter{
 	position:relative;
 	top: 30px;
-	left:-30px;
+	left:-170px;
 
 }
 
@@ -114,4 +145,5 @@ img[src="img/twitter.png"]{
 .nito{
 	font-weight: bold;
 }
+
 
